[package]
name = "xplane_udp"
version = "0.1.0"
edition = "2021"

[dependencies]
dashmap = "6.1.0"
log = "0.4.22"

[dependencies.env_logger]
version = "0.11.5"
optional = true

[dependencies.ratatui]
version = "0.29.0"
optional = true

[dependencies.crossterm]
version = "0.28.1"
optional = true

[features]
default = []
examples = ["env_logger", "ratatui", "crossterm"]